--- a/nelsonsUpholstery/src/App.css
+++ b/nelsonsUpholstery/src/App.css
@@ -1,3 +1,16 @@
 .App {
-  text-align: center;
+  background: url(/leather.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+@font-face {
+    font-family: myFirstFont;
+    src: url(/trench100free.otf);
+}
+
+div {
+  font-family: myFirstFont
 }
