--- a/nelsonsUpholstery/src/components/Gallery/Gallery.css
+++ b/nelsonsUpholstery/src/components/Gallery/Gallery.css
@@ -16,6 +16,7 @@
     margin: auto;
     padding: 5px 25px;
     border-radius: 4px;
+    max-width: 270px;
 }
 
 .-pictureArea > .-bottom {
@@ -31,4 +32,62 @@
 
 .-description {
     font-size: 20px;
+}
+
+.-fullScreenContainer {
+    background:rgba(255,255,255,0.7);
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    position: fixed;
+}
+
+.-fullScreenPic {
+    max-height: 650px;
+    max-width: 800px;
+    margin: auto;
+    margin-top: 5vh;
+    display: flex;
+}
+
+.-thumbnailContainer {
+    max-width: 600px;
+    margin: auto;
+    display: flex;
+}
+
+.-thumbnailPictureContainer {
+    margin: 5px;
+    border: solid 1px #ccc;
+}
+
+.-fullScreenThumbnail {
+    max-width: 100%;
+    display: block;
+    margin: auto;
+}
+
+.-picture {
+    max-width: 300px;
+    max-height: 300px;
+    background-color: white;
+    margin: 5px;
+    padding: 10px;
+}
+
+.-pictureThumbnailImage {
+    width: 100%;
+    height: 100%;
+    border-radius: 4px;
+    border: solid 1px #ccc;
+}
+
+.-picture img:hover {
+    border: solid 1px #777;
+}
+
+.-closeFullScreenPic {
+    max-width: 30px;
+    align-self: flex-start;
 }
